samples/_failures_safe/1761004318_6647ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ffff9964.c: In function ‘main’:
./samples/SAFE/__tmp_ffff9964.c:168:13: error: expected ‘;’ at end of input
  168 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_ffff9964.c:168:5: error: expected declaration or statement at end of input
  168 |     return 0
      |     ^~~~~~
